--- a/scss/fondos.scss
+++ b/scss/fondos.scss
@@ -1,8 +1,8 @@
 .fondo {
-	background-image: url("../img/fondo.png");
-	opacity: 0.7;
+	background-image: url("../img/fondo4.jpg");
 	margin: 0px;
 	padding: 20px;
+	background-size: cover;
 }
 
 .imagen{
