--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -1,14 +1,165 @@
+@media screen and (max-width: 500px) {
+	.circulos {
+		display:flex;
+		background-image: url("../img/persona1.png");
+		width: 100%;
+		height: 200%;
+		border-radius: 100%;
+	}
 
-.botonazo {
-	margin-bottom: 52vh;
-	padding: 0px;
-	justify-content: center;
-	font-family: 'Montserrat', sans-serif;
-	background-color: $cool-orange;
-	border: solid 1px #C4C3C3;
-	color: $cool-white;
-	width: 14%;
+	.circulos:hover {
+		display:flex;
+		background-image: url("../img/socio2.jpg");
+		width: 100%;
+		height: 100%;
+		border-radius: 100%;
+	}
+
+	.circulos2 {
+		display:flex;
+		background-image: url("../img/persona2.png");
+		width: 100%;
+		height: 100%;
+		border-radius: 100%;
+	}
+
+	.circulos2:hover {
+		display:flex;
+		background-image: url("../img/socio1.jpg");
+		width: 100%;
+		height: 100%;
+		border-radius: 100%;
+	}
+
+	.circulos3 {
+		display:flex;
+		background-image: url("../img/persona3.png");
+		width: 100%;
+		border-radius: 100%;
+	}
+
+	.circulos3:hover {
+		display:flex;
+		background-image: url("../img/socio3.jpg");
+		width: 100%;
+		border-radius: 120%;
+	}
 }
+
+@media screen and (min-width: 500px) {
+	.circulos {
+		display:flex;
+		background-image: url("../img/persona1.png");
+		width: 21%;
+		border-radius: 120%;
+	}
+
+	.circulos:hover {
+		display:flex;
+		background-image: url("../img/socio2.jpg");
+		width: 21%;
+		border-radius: 120%;
+	}
+
+	.circulos2 {
+		display:flex;
+		background-image: url("../img/persona2.png");
+		width: 21%;
+		border-radius: 120%;
+	}
+
+	.circulos2:hover {
+		display:flex;
+		background-image: url("../img/socio1.jpg");
+		width: 21%;
+		border-radius: 120%;
+	}
+
+	.circulos3 {
+		display:flex;
+		background-image: url("../img/persona3.png");
+		width: 21%;
+		border-radius: 120%;
+	}
+
+	.circulos3:hover {
+		display:flex;
+		background-image: url("../img/socio3.jpg");
+		width: 21%;
+		border-radius: 120%;
+	}
+}
+
+@media screen and (max-width: 500px) {
+  .botonazo {
+		margin-bottom: 2%;
+		margin-left: 5%;
+		font-family: 'Montserrat', sans-serif;
+		background-color: $cool-orange;
+		border: solid 1px #C4C3C3;
+		color: $cool-white;
+		width: 95%;
+	}
+
+	#inputGroupSelect02 {
+	margin-bottom: 2%;
+	margin-left: 5%;
+	width: 95%;
+	}
+
+	.input-group-prepend {
+		margin-bottom: 10%;
+		margin-left: 5%;
+		width: 98%;
+	} 
+
+	h2{
+	display: none;
+	font-family: 'Montserrat', sans-serif;
+	color: $cool-white;
+	text-shadow: black 0.1em 0.1em 0.2em;
+	font-size: 120%;
+	}
+
+	.redessoc2 {
+	display: none;
+	}
+
+}
+
+@media screen and (min-width: 500px) {
+
+	.botonazo {
+		margin-bottom: 40%;
+		justify-content: center;
+		font-family: 'Montserrat', sans-serif;
+		background-color: $cool-orange;
+		border: solid 1px #C4C3C3;
+		color: $cool-white;
+		width: 15%;
+	}
+
+	.input-group-prepend {
+		margin-bottom: 40%;
+	}
+
+	h2{
+	font-family: 'Montserrat', sans-serif;
+	color: $cool-white;
+	padding-bottom: 4%;
+	text-shadow: black 0.1em 0.1em 0.2em;
+	}
+
+		.redessoc2 {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	margin-bottom: -3%;
+	padding-bottom: -4%;
+	color: $cool-gray2;
+	}
+
+}	
 
 .buscador {
 	opacity: 0.7;
@@ -40,30 +191,38 @@
 
 .nav-item {
 	list-style: none;
-	width: 30%;
-	margin: 1px 2px 0px 2px;
+	display: flex;
+	justify-content: center;
 	border: 1px solid #ccc;
 	text-align: center;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	background-color: $cool-gray;
 	color: $cool-white;
 }
 
-.nav-link {
+.nav-item:hover {
 	color: $cool-white;
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	border: 1px solid #ccc;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	background-color: $cool-gray2;
+
 }
 
 .card-img-overlay {
 	line-height: 90%;
 }
 .card-text {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: #848383;
 }
 
 
 .card-title {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: #DC1B1B;
 }
 
@@ -91,7 +250,7 @@
 	font-family: 'Montserrat', sans-serif;
 	background-color: $cool-gray;
 	border: solid 1px #C4C3C3;
-	width: 90%;
+	width: 100%;
 }
 .btn2{
 	display: flex;
@@ -121,7 +280,24 @@
 
 .card-text {
 	font-family: 'Montserrat', sans-serif;
-	font-size: 100%;
+}
+
+@media screen and (min-width: 500px) {
+	.card-text3 {
+		font-family: 'Montserrat', sans-serif;
+		padding: 0%;
+		margin: -0.5%;
+		color: #7f8184;
+		}
+}
+
+@media screen and (max-width: 500px) {
+	.card-text3 {
+		font-family: 'Montserrat', sans-serif;
+		padding: 0%;
+		margin: -1.7%;
+		color: #7f8184;
+		}
 }
 
 .card-text2 {
@@ -135,7 +311,7 @@
 .card-title {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
-	color: $cool-gray2;
+	color: #7f8184;
 }
 
 .card-body {
@@ -184,18 +360,6 @@
   display: inline-block; 
 }
 
-nav.menu ul{
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	flex-wrap: nowrap;
-	width: 100%;
-} /*header*/
-
-ul ul.menu{
-	position: absolute;
-	display: none;
-} /*header*/
 
 li.menu2{
 	list-style: none;
@@ -222,32 +386,46 @@ ul.menu li:hover ul{
 nav ul li a.menuLink {
 	text-decoration: none;
 	color: white;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
-	font-size: 20px;
 	text-align: center;
 } /*header*/
 
-.redessocialesMenu{
+
+@media screen and (max-width: 500px) {
+.redessocialesMenu {
 	display: flex;
 	height: 6vh;
 	flex-direction: row;
-	align-items: center;
+	justify-content: center;
 	list-style: none;
 	width: 100%;
 	padding: 2px;
-} /*header*/
+		} /*header*/
+}
 
+@media screen and (min-width: 500px) {
+.redessocialesMenu {
+	display: flex;
+	height: 6vh;
+	flex-direction: row;
+	justify-content: flex-end;
+	list-style: none;
+	width: 100%;
+	padding: 2px;
+		} /*header*/
+
+}
 
 .titulos{
 	color: $cool-gray;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	margin-left: 40px;
 }
 
 .titulofooter{
 	color: $cool-gray;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	}
 
 .titulofooter{
@@ -262,15 +440,8 @@ nav ul li a.menuLink {
 
 /* Block */
 .redessociales{
-	display: flex;
-	background-color: $cool-gray;
-	height: 5vh;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center; 
-	list-style: none;
-	width: 100%;
-	padding: 10px;
+	background-color: #9A9C9F;
+	height: 0.5vh;
 }
 
 .redessociales--contacto {
@@ -290,7 +461,7 @@ nav ul li a.menuLink {
 /* Element */
 .redessociales__texto {
 	color: $cool-white;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	margin:0.2rem;
 	padding: 0.2rem;
 	font-size: 1.5rem;
@@ -327,22 +498,25 @@ nav ul li a.menuLink {
 	background-image: url("../img/skylinetira.png");
 	background-color: $cool-gray;
 	height: 15vh;
-	font-family: 'Oswald', sans-serif;
-	letter-spacing: 3px;
-	font-size: 180%;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	font-size: 240%;
 	text-align: center;
 	line-height: 15vh;
 	text-transform: uppercase;
 	margin-bottom: 0px;
+	text-shadow: gray 0.02em 0.02em 0.05em;
 }
 
 .TituloDePaginahome{
 	color: $cool-white;
 	background-color: $cool-gray;
 	height: 10vh;
-	font-family: 'Oswald', sans-serif;
-	letter-spacing: 3px;
-	font-size: 150%;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	font-size: 190%;
 	line-height: 10vh;
 	text-align: center;
 	text-transform: uppercase;
@@ -360,9 +534,10 @@ nav ul li a.menuLink {
 .ParrafoPrincipal{
 	color: #969595;
 	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
 	line-height: 1.6;
-	margin: 20px auto 20px auto;
-	padding: 20px 55px 20px 55px; 
+	margin: 1% 2% 1% 2%;
+	padding: 1% 2% 1% 2%; 
 	text-align: justify;
 }
 
@@ -415,14 +590,30 @@ section.home ul li div img:hover {
 	width: 68%; height: 35%;
 }
 
-div ol li{
+@media screen and (max-width: 500px) {
+  div ul li {
+	color: $cool-gray2;
+	font-family: 'Montserrat', sans-serif;
+	line-height: 1.6; 
+	text-align: justify;
+	list-style-position: inside;
+	list-style: none;
+	}
+
+}
+
+@media screen and (min-width: 500px) {
+
+	div ul li {
 	color: $cool-gray2;
 	font-family: 'Montserrat', sans-serif;
 	line-height: 1.6;
-	padding: 10px 40px 10px 40px; 
+	padding: 1% 0.5% 1% 0.5%; 
 	text-align: justify;
 	list-style-position: inside;
-}
+	list-style: none;
+	}
+}	
 
 
 .imagen{
@@ -457,6 +648,7 @@ li.servicios::before {
   color: $cool-orange;
   margin-right: 4px 4px 0px 4px;
   padding-right: 10px;
+  list-style: none;
 }
 
 
@@ -468,17 +660,18 @@ li.numeros::before {
 	width: 10px;
 	font-weight: bold;
 
+
 }
 
 /* Object */
 .leyenda {
 	color: $cool-gray2;
-	margin-left: 2%;
 }
 /* Elemento */
 .leyenda__texto {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 12px;
+	text-align: center;
 }
 /* Modificador */
 .leyenda--blanco {
@@ -541,45 +734,90 @@ li.numeros::before {
 	font-family: 'Montserrat', sans-serif;
 } /*footer*/
 
+@media screen and (min-width: 500px) {
+
 #link{
 	text-decoration: none;
 	color: white;
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.1em;
 	display: block;
 	font-size: 120%;
 	text-align: center;
 	background-color: #D9D9D9;
 	margin-left: 30%;
 	margin-right: 30%;
-	border: 3px solid #C2C2C2;
+	border: 3px solid #A4A4A4;
+	}
+
+#link:hover {
+	text-decoration: none;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	display: block;
+	font-size: 120%;
+	text-align: center;
+	background-color: $cool-orange;
+	margin-left: 30%;
+	margin-right: 30%;
+	border: 3px solid #FA6603;
+	}
+
 }
+
+@media screen and (max-width: 500px) {
+
+#link{
+	text-decoration: none;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.05em;
+	display: block;
+	font-size: 110%;
+	padding: 5%;
+	text-align: center;
+	background-color: #D9D9D9;
+
+	border: 3px solid #A4A4A4;
+	}
+
+#link:hover {
+	text-decoration: none;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	display: block;
+	font-size: 120%;
+	text-align: center;
+	background-color: $cool-orange;
+	margin-left: 30%;
+	margin-right: 30%;
+	border: 3px solid #FA6603;
+	}
+
+}
+
 
 .fondoindex {
 	margin-top: 14vh;
 	margin-bottom: 14vh;
 }
 
-.input-group-prepend {
-	margin-bottom: 52vh;
-}
-
 .nosotros{
 	color: #2F2E2E;
 }
-
-#socios {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	margin: 5%;
-} 
 
 
 @media screen and (max-width: 500px) {
   #socios {
 	display: flex;
 	flex-direction: column;
-	margin: 15%;
+	margin: 12%;
     } 
 }
 
